# ece414_Villalba_Deadder_Li

./: .gitignore  FSM_  PIR_Sensor_Final  Proximity_Final  README.md  basic_motor_run  blink2.c  ece414_Villalba_Deadder_Li.code-workspace  obstacle_avoidance_working
Lab2/: led_out.c  led_out.h  (+3 more)
Lab4/: CMakeLists.txt  main.c  touchscreen_demo.c  ts_lcd.c  ts_lcd.h
Lab6/: CMakeLists.txt  PID.c  pwm_methods.c  pwm_methods.h
Lab6/ic_demo/: CMakeCache.txt  Makefile  cmake_install.cmake  ic_pio_demo.dis  ic_pio_demo.elf  ic_pio_demo.elf.map  ic_pio_demo.hex  ic_pio_demo.uf2
Lab6/ic_demo/pico-sdk/: Makefile  cmake_install.cmake
Lab6/ic_demo/pico-sdk/docs/: Makefile  cmake_install.cmake
Lab6/ic_demo/pico-sdk/src/: Makefile  cmake_install.cmake
Lab6/ic_demo/pico-sdk/src/common/: Makefile  cmake_install.cmake
Lab6/ic_demo/pico-sdk/src/rp2040/: Makefile  cmake_install.cmake
Lab6/ic_demo/pico-sdk/src/rp2_common/: Makefile  cmake_install.cmake
Lab6/ic_demo/pico-sdk/tools/: Makefile  cmake_install.cmake
Lab6/pwd_demo/: CMakeCache.txt  Makefile  cmake_install.cmake  pwm_demo.dis  pwm_demo.elf  pwm_demo.elf.map  pwm_demo.hex  pwm_demo.uf2
Lab6/pwd_demo/pico-sdk/: Makefile  cmake_install.cmake
Lab6/pwd_demo/pico-sdk/docs/: Makefile
Lab6/pwd_demo/pico-sdk/src/: Makefile  cmake_install.cmake
Lab6/pwd_demo/pico-sdk/src/common/: Makefile  cmake_install.cmake
Lab6/pwd_demo/pico-sdk/src/rp2040/: Makefile  cmake_install.cmake
Lab6/pwd_demo/pico-sdk/src/rp2_common/: Makefile  cmake_install.cmake
Lab6/pwd_demo/pico-sdk/tools/: Makefile  cmake_install.cmake
(+956 files in other folders)
